kubernetes/base/database/pgo-cluster/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${NAMESPACE}-pgadmin
  annotations:
    gethomepage.dev/description: Postgres Database Manager for namespace ${NAMESPACE}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/icon: si-postgresql
    gethomepage.dev/name: ${NAMESPACE} pgAdmin
    gethomepage.dev/pod-selector: postgres-operator.crunchydata.com/pgadmin=${NAMESPACE}-pgadmin
spec:
  hostnames: ["${NAMESPACE}-pgadmin.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: "${NAMESPACE}-pgadmin"
          port: 5050
